Refactor category activities
 - Create Fragments for each Activity
 - Move logic from Activity to corresponding Fragment
 - Create layout to serve as container for Fragment
 - Update each Activity to set new layout as content view and insert new Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="category_family">Family Members</string>
 
     <string name="word_image_content_desc">Image associated to word</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
